# singularity

./: .gitignore  CMakeLists.txt  README.md  stress_test.cpp
.github/workflows/: cmake-build-test.yml
scripts/: perftest.py
singularity/: CMakeLists.txt  concurrency.hpp  concurrency.test.cpp  main.cpp  sockimpl.cpp  sockimpl.hpp  sockimpl.test.cpp  tcp_server.cpp  tcp_server.hpp  tcp_server.test.cpp  utils.hpp
singularity/include/: sockimpl.hpp
singularity/src/: main.cpp
singularity/test/integration/: CMakeLists.txt  buffer_performance.cpp
singularity/test/unit/: CMakeLists.txt  sockimpl.test.cpp
test/: buffer_performance.cpp  server_performance_loopback.cpp
